@@ -570,7 +570,7 @@ gaim_gtk_request_add_permit(GaimAccount *account, const char *name)
 			_("Type a user you permit to contact you."),
 			_("Please enter the name of the user you wish to be "
 			  "able to contact you."),
-			NULL, FALSE, FALSE,
+			NULL, FALSE, FALSE, NULL,
 			_("Permit"), G_CALLBACK(add_permit_block_cb),
 			_("Cancel"), G_CALLBACK(destroy_request_data),
 			data);
@@ -608,7 +608,7 @@ gaim_gtk_request_add_block(GaimAccount *account, const char *name)
 		gaim_request_input(account, _("Block User"),
 			_("Type a user to block."),
 			_("Please enter the name of the user you wish to block."),
-			NULL, FALSE, FALSE,
+			NULL, FALSE, FALSE, NULL,
 			_("Block"), G_CALLBACK(add_permit_block_cb),
 			_("Cancel"), G_CALLBACK(destroy_request_data),
 			data);
