@@ -2500,7 +2500,7 @@ static void yahoo_act_id(GaimConnection *gc, const char *entry)
 static void yahoo_show_act_id(GaimConnection *gc)
 {
 	gaim_request_input(gc, NULL, _("Active which ID?"), NULL,
-					   gaim_connection_get_display_name(gc), FALSE, FALSE,
+					   gaim_connection_get_display_name(gc), FALSE, FALSE, NULL,
 					   _("OK"), G_CALLBACK(yahoo_act_id),
 					   _("Cancel"), NULL, gc);
 }
@@ -2508,7 +2508,7 @@ static void yahoo_show_act_id(GaimConnection *gc)
 static void yahoo_show_chat_goto(GaimConnection *gc)
 {
 	gaim_request_input(gc, NULL, _("Join who in chat?"), NULL,
-					   "", FALSE, FALSE,
+					   "", FALSE, FALSE, NULL,
 					   _("OK"), G_CALLBACK(yahoo_chat_goto),
 					   _("Cancel"), NULL, gc);
 }
