@@ -171,7 +171,7 @@ typedef struct
 {
 	void *(*request_input)(const char *title, const char *primary,
 						   const char *secondary, const char *default_value,
-						   gboolean multiline, gboolean masked,
+						   gboolean multiline, gboolean masked, gchar *hint,
 						   const char *ok_text, GCallback ok_cb,
 						   const char *cancel_text, GCallback cancel_cb,
 						   void *user_data);
@@ -1070,6 +1070,7 @@ GaimFilterAccountFunc gaim_request_field_account_get_filter(
  * @param default_value The default value.
  * @param multiline     TRUE if the inputted text can span multiple lines.
  * @param masked        TRUE if the inputted text should be masked in some way.
+ * @param hint          bleh.
  * @param ok_text       The text for the OK button.
  * @param ok_cb         The callback for the OK button.
  * @param cancel_text   The text for the cancel button.
@@ -1081,7 +1082,7 @@ GaimFilterAccountFunc gaim_request_field_account_get_filter(
 void *gaim_request_input(void *handle, const char *title,
 						 const char *primary, const char *secondary,
 						 const char *default_value,
-						 gboolean multiline, gboolean masked,
+						 gboolean multiline, gboolean masked, gchar *hint,
 						 const char *ok_text, GCallback ok_cb,
 						 const char *cancel_text, GCallback cancel_cb,
 						 void *user_data);
